Fixed left alignment of lenya header
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@494814 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/webapp/lenya/resources/css/default.css
+++ b/src/webapp/lenya/resources/css/default.css
@@ -44,7 +44,7 @@ li {
 
 .lenya-header {
     vertical-align: bottom;
-    padding-left: 20px;
+    padding-left: 30px;
     background-color: White;
     border-bottom: solid 1px #B1B1B1;
     color: black;
